--- a/templates/author/showAuthor.html.twig
+++ b/templates/author/showAuthor.html.twig
@@ -1,11 +1,9 @@
 <html>
-    <head>
-        <title>
-            Show Author
-        </title>
-    </head>
+   <head>
+       <title>show Author</title>
+   </head>
     <body>
-        <h1>Author Name: {{ authorName }}</h1>
-        <h1>Author Email: {{ authorEmail }}</h1>
+        <h1>The author Name: {{ authorName }}</h1>
+         <h1>the author Email: {{ authorEmail }}</h1>
     </body>
 </html>
