--- a/templates/crud_author/listAuthor.html.twig
+++ b/templates/crud_author/listAuthor.html.twig
@@ -1,18 +1,18 @@
 <html>
     <head></head>
     <body>
-    <h1>Table of Authors</h1>
-    <form action="{{ path("app_search_author") }}" method="get">
-        <input type="text" name="name" placeholder="Search By name">
-        <input type="submit" value="Search">
+    <h1>Table of authors</h1>
+    <form method="get" action="{{ path("app_search_author") }}">
+        <input type="text" name="name" placeholder="search by name">
+        <input type="submit" value="search">
     </form>
     <table>
-        <tr><th>ID</th><th>Name</th><th>Email</th></tr>
-        <tr {%for author in authors%}>
+        <tr><th>id</th><th>name</th><th>email</th></tr>
+        <tr {% for author in authors %}>
             <td>{{ author.id }}</td>
             <td>{{ author.name }}</td>
-            <td>{{ author.email }}</td>
-        </tr {% endfor %}>
+            <td>{{ author.email}}</td>
+        </tr{% endfor %}>
     </table>
     </body>
 </html>
